--- a/terraform/lighthouse/cloud-config.yml
+++ b/terraform/lighthouse/cloud-config.yml
@@ -20,14 +20,15 @@ packages:
  - git
  - unzip
  - nmap
+ - net-tools
 
 write_files:
   - path: /run/install_lighthouse.sh
     permissions: '0755'
     content: |
       echo "INSTALL LIGHTHOUSE SCRIPT"
-      wget https://github.com/sigp/lighthouse/releases/download/v0.3.2/lighthouse-v0.3.2-x86_64-unknown-linux-gnu-portable.tar.gz
-      tar -xvf lighthouse-v0.3.2-x86_64-unknown-linux-gnu-portable.tar.gz
+      wget https://github.com/sigp/lighthouse/releases/download/v0.3.3/lighthouse-v0.3.3-x86_64-unknown-linux-gnu-portable.tar.gz
+      tar -xvf lighthouse-v0.3.3-x86_64-unknown-linux-gnu-portable.tar.gz
       sudo cp lighthouse /usr/local/bin
       lighthouse --version
   - path: /etc/systemd/system/lighthouse-beacon.service
@@ -36,20 +37,16 @@ write_files:
     content: |
       [Unit]
       Description=Lighthouse Beacon
-      After=network.target auditd.service
-      Wants=network.target
+      After=network.target
       
       [Service]
       WorkingDirectory=/home/eth
       ExecStart=/usr/local/bin/lighthouse --testnet medalla beacon --http --http-address 0.0.0.0
       User=eth
-      Group=eth
       Restart=always
-      RestartSec=5s
 
       [Install]
       WantedBy=multi-user.target
-      Alias=lighthouse-beacon.service
 
 runcmd:
   - swapon -s
